Fixed z-index for advanced unit-search as well. /Joakim

--- a/HsaTools/trunk/Search/composites/webcomp/src/main/resources/resources/styles/style.css
+++ b/HsaTools/trunk/Search/composites/webcomp/src/main/resources/resources/styles/style.css
@@ -493,3 +493,7 @@ div.autocomplete {
 #languageKnowledge_container {
 	z-index: 9000;
 }
+
+#businessClassificationName_container {
+	z-index: 9000;
+}
